--- a/src/frontend/src/app/components/app.template.html
+++ b/src/frontend/src/app/components/app.template.html
@@ -1,4 +1,3 @@
 <div class="container">
-    <h1>System name: {{title}}</h1>
-    <hello-world></hello-world>
+    <login-page></login-page>
 </div>
