--- a/src/frontend/src/app/components/units/units.component.html
+++ b/src/frontend/src/app/components/units/units.component.html
@@ -1,1 +1,14 @@
-UNITS!!!!
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+    <thead>
+    <tr>
+        <th class="mdl-data-table__cell--non-numeric">Nazwa</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let unit of units">
+        <td class="mdl-data-table__cell--non-numeric">{{unit.fullName}}</td>
+        <td><button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Szczegóły</button></td>
+    </tr>
+    </tbody>
+</table>
