--- a/src/frontend/src/app/components/units/add/addEditUnit.component.html
+++ b/src/frontend/src/app/components/units/add/addEditUnit.component.html
@@ -4,16 +4,20 @@
         <div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.shortName">
-                <label class="mdl-textfield__label" >Skrót</label>
+                <label class="mdl-textfield__label">Skrót</label>
             </div>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.fullName">
-                <label class="mdl-textfield__label" >Pełna nazwa</label>
+                <label class="mdl-textfield__label">Pełna nazwa</label>
             </div>
         </div>
     </div>
     <div class="mdl-card__actions mdl-card--border">
         <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-        (click)="save()">Zapisz</button>
+                (click)="save()">Zapisz
+        </button>
+        <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+                *ngIf="this.allowRemoval" (click)="delete()">Usuń
+        </button>
     </div>
 </div>
