--- a/src/frontend/src/app/components/top-menu/top-menu.style.css
+++ b/src/frontend/src/app/components/top-menu/top-menu.style.css
@@ -1,11 +1,7 @@
-a.mdl-js-ripple-effect {
-    position: relative;
-}
-
+/* Disable ugly boxes around images in IE10 */
 a img{
     border: 0px;
 }
-
 .mdl-navigation__link{
     -webkit-font-smoothing: antialiased;
 }
