During permissions FE implementation

--- a/src/frontend/src/app/components/top-menu/top-menu.template.html
+++ b/src/frontend/src/app/components/top-menu/top-menu.template.html
@@ -30,5 +30,6 @@
         <a class="mdl-navigation__link side-nav" routerLink="/users" routerLinkActive="current">Użytkownicy</a>
         <a class="mdl-navigation__link side-nav" routerLink="/units" routerLinkActive="current">Jednostki
             organizacyjne</a>
+        <a class="mdl-navigation__link side-nav" routerLink="/permissions" routerLinkActive="current">Uprawnienia</a>
     </nav>
 </div>
