--- a/src/frontend/src/app/components/app.template.html
+++ b/src/frontend/src/app/components/app.template.html
@@ -14,6 +14,8 @@
                    routerLinkActive="current">Użytkownicy</a>
                 <a class="mdl-navigation__link mdl-js-button mdl-js-ripple-effect top-nav" routerLink="/units"
                    routerLinkActive="current">Jednostki organizacyjne</a>
+                <a class="mdl-navigation__link mdl-js-button mdl-js-ripple-effect top-nav" routerLink="/permissions"
+                   routerLinkActive="current">Uprawnienia</a>
             </nav>
             <button class="mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
                 <i class="material-icons">more_vert</i>
