Finished permissions service

--- a/src/frontend/src/app/components/permissions/add/addPermission.component.html
+++ b/src/frontend/src/app/components/permissions/add/addPermission.component.html
@@ -2,11 +2,11 @@
     <div class="mdl-card__supporting-text">
         <!-- Simple Textfield -->
         <div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield">
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.permission.name">
                 <label class="mdl-textfield__label">Nazwa</label>
             </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield">
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.permission.description">
                 <label class="mdl-textfield__label">Opis</label>
             </div>
