--- a/src/frontend/src/app/components/persons/persons.component.html
+++ b/src/frontend/src/app/components/persons/persons.component.html
@@ -13,7 +13,7 @@
         <td class="mdl-data-table__cell--non-numeric">{{person.lastName}}</td>
         <td>{{person.pesel}}</td>
         <td>
-            <button routerLink="edit/{{person.id}}"
+            <button routerLink="{{person.id}}"
                     class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                 Szczegóły
             </button>
