Finished user granted permissions

--- a/src/frontend/src/app/components/permissions/edit/editPermission.component.html
+++ b/src/frontend/src/app/components/permissions/edit/editPermission.component.html
@@ -4,11 +4,11 @@
         <div>
               <div class="mdl-textfield mdl-js-textfield">
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.permission.name" id='name' disabled>
-                <label for="name">Nazwa</label>
+                <label for="name"><b>Nazwa</b></label>
             </div>
             <div class="mdl-textfield mdl-js-textfield">
                 <input  class="mdl-textfield__input" type="text" [(ngModel)]="this.permission.description" id='opis'>
-                <label for="opis">Opis</label>
+                <label for="opis"><b>Opis</b></label>
             </div>
         </div>
     </div>
