--- a/src/frontend/src/app/components/persons/persons.component.html
+++ b/src/frontend/src/app/components/persons/persons.component.html
@@ -1,7 +1,8 @@
+<h2 class="mdl-card__title-text">Lista użytkowników</h2>
 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <thead>
     <tr>
-        <th class="mdl-data-table__cell--non-numeric">Pierwsze imię</th>
+        <th class="mdl-data-table__cell--non-numeric">Imię</th>
         <th class="mdl-data-table__cell--non-numeric">Nazwisko</th>
         <th>Pesel</th>
         <th></th>
