Fixed refresh bug, during style changes implementation

--- a/src/frontend/src/app/components/persons/add/addEditPerson.component.html
+++ b/src/frontend/src/app/components/persons/add/addEditPerson.component.html
@@ -1,4 +1,5 @@
-<div class="mdl-card mdl-shadow--6dp">
+<h2 class="center-hori">Dodaj nowego użytkownika</h2>
+<div class="mdl-card mdl-shadow--6dp center-hori">
     <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Dane użytkownika</h2>
     </div>
