--- a/src/frontend/src/app/components/persons/persons.component.html
+++ b/src/frontend/src/app/components/persons/persons.component.html
@@ -1,5 +1,5 @@
-<h2 class="mdl-card__title-text">Lista użytkowników</h2>
-<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+<h4 class="center-hori">Lista użytkowników</h4>
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp center-hori">
     <thead>
     <tr>
         <th class="mdl-data-table__cell--non-numeric">Imię</th>
