--- a/src/frontend/src/app/components/user-permissions/userPermissions.component.html
+++ b/src/frontend/src/app/components/user-permissions/userPermissions.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="user-permission-card mdl-card mdl-shadow--2dp">
+<div class="user-permission-card mdl-card mdl-shadow--2dp center-hori">
     <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Uprawnienia posiadane przez użytkownika</h2>
     </div>
