--- a/src/frontend/src/style.css
+++ b/src/frontend/src/style.css
@@ -34,3 +34,12 @@ a img{
 .user-permission-card.mdl-card {
   width: 700px;
 }
+
+.center-hori {
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+h4 {
+    text-align: center;
+}
