Create user update, few style changes and fixes

--- a/src/frontend/src/app/components/permissions/edit/editPermission.component.html
+++ b/src/frontend/src/app/components/permissions/edit/editPermission.component.html
@@ -1,4 +1,6 @@
-<div class="mdl-card mdl-shadow--6dp">
+<div id="table-container">
+    <h2>Edytuj uprawnienia</h2>
+<div class="mdl-card mdl-shadow--6dp center-hori">
     <div class="mdl-card__supporting-text">
         <!-- Simple Textfield -->
         <div>
@@ -16,8 +18,9 @@
         <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
                 (click)="editPermission()">Zapisz zmiany
         </button>
-        <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+        <!--<button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
                 (click)="deletePermission()">Usuń uprawnienia
-        </button>
+        </button>-->
     </div>
+</div>
 </div>
