--- a/src/frontend/src/app/components/permissions/permissions.component.html
+++ b/src/frontend/src/app/components/permissions/permissions.component.html
@@ -1,6 +1,6 @@
-<div id="table-container">
-    <h1>Uprawnienia</h1>
+    <h2>Uprawnienia</h2>
 
+<div id="table-container">
     <div class="table-responsive-vertical shadow-2dp">
         <table id="table" class="table table-hover table-bordered table-mobile-condensed shadow-2dp">
             <thead>
@@ -29,9 +29,9 @@
             <tfoot><p>&nbsp;</p>
             </tfoot>
         </table>
-        <button routerLink="add"
+        <!--<button routerLink="add"
                 class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored edge-button">
             <i class="material-icons">add</i>
-        </button>
+        </button>-->
     </div>
 </div>
