--- a/src/frontend/src/app/components/persons/add/addEditPerson.component.html
+++ b/src/frontend/src/app/components/persons/add/addEditPerson.component.html
@@ -1,5 +1,6 @@
-<h2 class="center-hori">Dodaj nowego użytkownika</h2>
-<div class="mdl-card mdl-shadow--6dp center-hori">
+<h2 *ngIf="!this.allowRemoval">Dodaj użytkownika</h2>
+<h2 *ngIf="this.allowRemoval">Edytuj użytkownika</h2>
+<div class="user-data-card mdl-card mdl-shadow--6dp center-hori">
     <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Dane użytkownika</h2>
     </div>
@@ -26,9 +27,12 @@
                 <input class="mdl-textfield__input" type="text" [(ngModel)]="this.person.login" id="login">
                 <label for="login"><b>Login</b></label>
             </div>
-            <div class="mdl-textfield mdl-js-textfield">
-                <input class="mdl-textfield__input" type="password" [(ngModel)]="this.person.password" id="passwd">
-                <label for="passwd"><b>Hasło</b></label>
+            <div class="mdl-select mdl-js-select">
+                <select class="mdl-select__input" [(ngModel)]="selectedUnit" id="unit">
+                    <option *ngFor="let unit of units" [ngValue]="unit">{{unit.fullName}}</option>
+                </select>
+                <br>
+                <label for="unit"><b>Jednostka organizacyjna</b></label>
             </div>
         </div>
     </div>
@@ -40,7 +44,8 @@
                 *ngIf="this.allowRemoval" (click)="delete()">Usuń
         </button>
             <button routerLink="permissions"
-                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Uprawnienia
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                     *ngIf="this.allowRemoval" >Uprawnienia
             </button>
     </div>
 </div>
