--- a/src/frontend/src/app/components/units/add/addEditUnit.component.html
+++ b/src/frontend/src/app/components/units/add/addEditUnit.component.html
@@ -1,14 +1,16 @@
-<div class="mdl-card mdl-shadow--6dp">
+<h2 *ngIf="!this.allowRemoval">Dodaj jednostkę</h2>
+<h2 *ngIf="this.allowRemoval">Edytuj jednostkę</h2>
+<div class="mdl-card mdl-shadow--6dp center-hori">
     <div class="mdl-card__supporting-text">
         <!-- Simple Textfield -->
         <div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.shortName">
-                <label class="mdl-textfield__label">Skrót</label>
+            <div class="mdl-textfield mdl-js-textfield">
+                <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.shortName" id="short">
+                <label for="short"><b>Skrót</b></label>
             </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.fullName">
-                <label class="mdl-textfield__label">Pełna nazwa</label>
+            <div class="mdl-textfield mdl-js-textfield">
+                <input class="mdl-textfield__input" type="text" [(ngModel)]="this.unit.fullName" id="full">
+                <label for="full"><b>Pełna nazwa</b></label>
             </div>
         </div>
     </div>
