--- a/src/frontend/src/app/components/user-permissions/userPermissions.component.html
+++ b/src/frontend/src/app/components/user-permissions/userPermissions.component.html
@@ -1,10 +1,9 @@
+<div id="table-container">
+<h2>Uprawnienia posiadane przez użytkownika</h2>
 
 
 <div class="user-permission-card mdl-card mdl-shadow--2dp center-hori">
-    <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text">Uprawnienia posiadane przez użytkownika</h2>
-    </div>
-<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" width="1000">
     <thead>
     <tr>
         <th class="mdl-data-table__cell--non-numeric">Nazwa uprawnienia</th>
@@ -59,4 +58,5 @@
                (click)="grantPermission()">Nadaj
         </button>
     </div>
+</div>
 </div>
