Update before oddanie

--- a/src/frontend/src/app/components/persons/add/addEditPerson.component.html
+++ b/src/frontend/src/app/components/persons/add/addEditPerson.component.html
@@ -47,5 +47,9 @@
                     class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
                      *ngIf="this.allowRemoval" >Uprawnienia
             </button>
+            <button routerLink="studenttours"
+                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                     *ngIf="this.allowRemoval" >Tury studiów
+            </button>
     </div>
 </div>
