--- a/src/frontend/src/app/components/specializations/addEdit/addEditSpecialization.component.html
+++ b/src/frontend/src/app/components/specializations/addEdit/addEditSpecialization.component.html
@@ -1,22 +1,25 @@
-<div class="mdl-card mdl-shadow--6dp">
+<h2 *ngIf="!this.allowRemoval">Dodaj specjalizację</h2>
+<h2 *ngIf="this.allowRemoval">Edytuj specjalizację</h2>
+<div class="mdl-card mdl-shadow--6dp center-hori">
     <div class="mdl-card__supporting-text">
         <!-- Simple Textfield -->
         <div class="mdl-textfield mdl-js-textfield">
             <input class="mdl-textfield__input" type="text" [(ngModel)]="specialization.fullName" id="fullName">
-            <label for="fullName">Pełna nazwa</label>
+            <label for="fullName"><b>Pełna nazwa</b></label>
         </div>
         <div class="mdl-textfield mdl-js-textfield">
             <input class="mdl-textfield__input" type="text" [(ngModel)]="specialization.shortName" id='shortName'>
-            <label for="shortName">Skrót</label>
+            <label for="shortName"><b>Skrót</b></label>
         </div>
         <div class="mdl-selectfield mdl-js-selectfield">
             <select class="mdl-selectfield__select" [(ngModel)]="specialization.type" id="type">
-                <option value="PATH">PATH</option>
-                <option value="FACULTY">FACULTY</option>
-                <option value="MAJOR">MAJOR</option>
-                <option value="SPECIALITY">SPECIALITY</option>
+                <option value="FACULTY">Wydział</option>
+                <option value="MAJOR">Kierunek</option>
+                <option value="SPECIALITY">Specjalizacja</option>
+                <option value="PATH">Ściezka</option>
             </select>
-            <label for="type">Typ</label>
+            <br>
+            <label for="type"><b>Typ</b></label>
         </div>
     </div>
     <div class="mdl-card__actions mdl-card--border">
