--- a/src/frontend/src/app/components/specializations/specializations.component.html
+++ b/src/frontend/src/app/components/specializations/specializations.component.html
@@ -26,10 +26,10 @@
                     <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent"
                             (click)="toggleChildren(specialization)" *ngIf="specialization.children != null">▼
                     </button>
-                    <button routerLink="{{specialization.id}}/add"
+                    <!--<button routerLink="{{specialization.id}}/add"
                             class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent">
                         Dodaj
-                    </button>
+                    </button>-->
                     <button routerLink="{{specialization.id}}"
                             class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent">
                         Edytuj
