--- a/src/frontend/src/app/components/subjects/subjects.template.html
+++ b/src/frontend/src/app/components/subjects/subjects.template.html
@@ -32,21 +32,21 @@
                     {{subject.type}}
                 </td>
                 <td class="align-right">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent">
+                    <!--<button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent">
                         Edytuj
-                    </button>
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect button-red">
+                    </button>-->
+                    <!--<button class="mdl-button mdl-js-button mdl-js-ripple-effect button-red">
                         Usuń
-                    </button>
-
+                    </button>-->
                 </td>
             </tr>
             </tbody>
             <tfoot><p>&nbsp;</p>
             </tfoot>
         </table>
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored edge-button">
+        <button routerLink="add"
+            class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored edge-button">
             <i class="material-icons">add</i>
-        </button>
+        </button>   
     </div>
 </div>
